# rpz-manager

./: CHANGELOG.md  Dockerfile.centos  Dockerfile.ubuntu  README.md  rpz_manager.py  setup.cfg
.github/workflows/: main.yml
config/: rpz-loggers.ini
test/: test_data.py
test/system/: entrypoint.sh  functions  named_policy.conf  named_zone_centos.conf  named_zone_ubuntu.conf  setup_centos.sh  setup_ubuntu.sh  tests.py
test/unit/: tests.py
