[metadata]
name = rpz-manager
version = attr: rpz_manager.VERSION
author = Steven Kroh
author-email = steve@kroh.xyz
home-page = https://github.com/stevekroh/rpz-manager
description = Block ads and malicious domains with response policy zones
long-description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license-file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: Name Service (DNS)
project_urls =
    Changelog = https://github.com/stevekroh/rpz-manager/blob/master/CHANGELOG.md

[options]
zip_safe = true
python_requires = >= 3.6
py_modules = rpz_manager

[options.entry_points]
console_scripts =
    rpz-manager = rpz_manager:main

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
